--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: #ffffff;
-  text-transform: uppercase;
+  text-transform: none;
 
   background-color: #849d8f;
 }
@@ -21,52 +21,32 @@ a {
 .header-button,
 .breadcrumb,
 .main-catalog-list,
-.footer ul {
+.footer ul,
+.footer-social ul,
+.main-catalog ul {
   list-style: none;
+   padding: 0;
+  margin: 0;
 
 }
 
 .header,
 .main-catalog,
-.wrepper,
 .footer {
-  margin: 0 auto;
-  width: 1250px;
+	width: 1200px;
+	margin: 10px auto;
+
 }
 
-
-.header-navigation-site,
-.header-catalog-site,
-.header-navigation-list,
-.header-button,
-.footer-social ul,
-.main-catalog ul {
-
-  padding: 0;
-  margin: 0;
-}
-
-
+/*Стили для навигации*/
 
 .header-container,
 .wrepper-main-catalog,
 .main-catalog-list-wrepper {
-  display: flex;
-  margin: 10px auto;
-  padding: 0 10px;
-}
+	display: flex;
+	align-items: center;
+	padding: 0 26px;
 
-
-.header-navigation,
-.header-catalog-navigation {
-  font-weight: 700;
-  line-height: 18px;
-  font-size: 16px;
-}
-/*Стили для навигации*/
-
-.header-container {
-  align-items: center;
 }
 
 .header-container-1 {
@@ -74,81 +54,73 @@ a {
   align-items: center;
 }
 
- .header-navigation-site {
+.header-navigation-site {
   display: flex;
   align-items: center;
   margin-left: 20px;
 }
 
-.header-catalog-site {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-}
+.header-container-2 {
+  margin-left: auto;
+  }
 
-.header-navigation-site li,
+ .header-navigation-site li {
+ 	margin-right: 20px;
+ }
+
+
 .header-catalog-site li {
   margin-right: 20px;
 }
 
- .header-container-2 {
-  margin-left: auto;
-  }
+ .header-navigation,
+.header-catalog-navigation {
+  font-weight: 700;
+  line-height: 18px;
+  font-size: 16px;
+}
 
- .header-button {
+.header-button {
   display: flex;
   align-items: center;
  }
 
-.header-container-2 li {
+ .header-container-2 li {
   padding-right:20px;
 }
-
-
 
 .header-catalog-site,
 .header-catalog-navigation ul {
 
   display: flex;
+  align-items: center;
   margin-left: 0px;
 }
 
-.header-navigation .header-navigation-site,
-.header-navigation .header-catalog-site {
+.header-navigation .header-navigation-site  {
   position: relative;
 }
 
- .header-presence-button  {
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  width: 100px;
-  height: 32px;
-  border: none;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 18px;
-  background-color: #f7f6f3;
-  border-radius: 15px;
-  display: none;
-}
 
 .header-navigation-list {
-  width: 143px;
-  padding: 14px 0;
+
+  padding: 13px 0;
   background-color: #f8f7f4;
   font-size: 14px;
   line-height: 16px;
   border-radius: 5px;
   position: absolute;
-  top: 26px;
-  left: -20px;
+  top: 40px;
+  left: -15px;
   display: none;
 }
-.header-navigation-list li:not(:nth-child(1))  {
-  margin-bottom: 10px;
-  padding: 5px 10px;
 
+li:hover .header-navigation-list {
+  display: block;
+}
+
+.header-navigation-list li:not(:nth-child(1))  {
+  padding: 10px 20px;
 }
 
 .header-navigation-list a {
@@ -165,39 +137,36 @@ a {
   font-weight: 700;
   line-height: 16px;
   margin-bottom: 12px;
-  padding-left: 10px;
+  padding-left: 20px;
   padding-bottom: 15px;
   border-bottom: 1px solid #d1d0ce;
 }
 
-li:first-of-type:hover .header-navigation-list {
-  display: block;
+.header-navigation-site >li:hover {
+  padding: 9px 13px;
+  border-radius: 15px;
+  background-color: #f7f6f3;
 }
 
- li:first-child:hover .header-presence-button {
-  display: block;
+.header-navigation-site >li:hover >a {
+  color: #323232;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 18px;
 }
 
-.header-navigation-list li:nth-child(3):hover {
+
+.header-navigation-list li:not(:nth-child(1)):hover {
   background-color: #fbded7;
 }
 
-.header-navigation-list li:nth-child(3):active {
+.header-navigation-list li:not(:nth-child(1)):active {
   background-color: #f6b5a5;
 }
 
-li:first-child:active .header-presence-button {
-  box-shadow: inset 0 2px 1px #696969;
-  background-color: #ededed;
-  background-color: #f8f7f4;
-
-}
-
-
 /*Конец стили для навигации*/
-
-/*Стили для кнопок-поиск*/
-
+/*Стиль для "Поиск"*/
 .header-button {
   position: relative;
 }
@@ -205,21 +174,18 @@ li:first-child:active .header-presence-button {
 .magnifier {
   width: 33px;
   height: 33px;
-  border: none;
-  border-radius: 50%;
-}
-.submit {
-  width: 33px;
-  height: 33px;
-  position: absolute;
-  left: 311px;
-  top: -35px;
-  background-image: url(../img/logo-magnifie-2.png);
+  background-image: url(../img/logo-magnifier.png);
   background-repeat: no-repeat;
   background-position: center;
   border: none;
   border-radius: 50%;
-  display: none;
+}
+
+.magnifier:hover {
+  background-image: url(../img/logo-magnifie-2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+
 }
 
 .header-button-search-form input {
@@ -240,8 +206,8 @@ li:first-child:active .header-presence-button {
 .header-button-search-form {
   width: 341px;
   position: absolute;
-  top: 33px;
-  left: -321px;
+  top: 35px;
+  left: -305px;
   border: none;
   border-radius: 5px;
   background-color: #f8f7f4;
@@ -265,9 +231,13 @@ li:hover .submit {
 /*Стили для кнопки "Вход"*/
 
 .header-button-input {
-  width: 90px;
-  height: 32px;
-  border-radius: 10px;
+  padding-top: 10px;
+  padding-left: 44px;
+  padding-right: 17px;
+
+  opacity: 0,8;
+  padding-bottom: 9px;
+  border-radius: 25px;
   font-size: 14px;
   font-weight: 500;
   line-height: 16px;
@@ -275,23 +245,35 @@ li:hover .submit {
   border: none;
   background-image: url(../img/logo-input.png);
   background-repeat: no-repeat;
-  background-position: 5% 40%;
+  background-position: 16px 40%;
 
 }
 
-.header-button-input-form {
+.header-button-input:hover {
+  background-image: url(../img/logo-forminput.png);
+  background-repeat: no-repeat;
+  background-color: #f8f7f4;
+  color: #323232;
+   opacity: 1;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+
+.header-input-form {
   width: 277px;
   padding: 20px 17px;
   border-radius: 10px;
   position: absolute;
-  top: 80px;
-  left: -130px;
+  top: 40px;
+  left: -160px;
   display: none;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
   background-color: #f8f7f4;
 }
 
-.header-button-input-form input {
+.header-input-form input {
   width: 241px;
   padding-left: 15px;
   padding-top: 16px;
@@ -301,44 +283,24 @@ li:hover .submit {
   background-color: #ffffff;
 }
 
-.header-button li:hover .header-button-input-form {
+.header-button li:hover .header-input-form {
   display: block;
 }
 
-.header-button li:hover .header-button-inputsait {
-  display: block;
-}
 
-.header-button-inputsait {
-  display: none;
-}
+.form-button-input {
 
-.header-button-inputsait {
-  position: absolute;
-  top: 45px;
-  background-image: url(../img/logo-forminput.png);
-  background-repeat: no-repeat;
-  background-position: 5% 40%;
-  width: 93px;
-  height: 32px;
-  border-radius: 10px;
-  color: #323232;
-  border: none;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-}
+  padding: 15px 25px;
 
-.form-input {
-  width: 100px;
-  height: 44px;
-  background-color: #e84d37;
   color: #fefefe;
   border: none;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
-  border-radius: 20px;
+  border-radius: 40px;
+  box-shadow: 0 1px 2px #ac1000;
+  background-color: #e84d37;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
 
 .blok-2 {
@@ -352,7 +314,7 @@ li:hover .submit {
   flex-direction: column;
 }
 
-.header-button-input-form a {
+.header-input-form a {
   color: #323232;
   font-size: 13px;
   font-weight: 400;
@@ -360,69 +322,66 @@ li:hover .submit {
   }
 /*Конец стилей "Вход"*/
 
-/*Кнопка "Вход" для index.html*/
-.header-button-basket {
-  width: 100px;
-  height: 32px;
-  border-radius: 20px;
-  border: none;
-  color: #ffffff;
-  background-image: url(../img/logo-basket.png);
-  background-repeat: no-repeat;
-  background-position: 0 5px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-}
-/* Стили для section class="activities"*/
 
-.activities {
-  margin-bottom: 40px;
-  border-radius: 10px;
-  font-weight: 400;
+/* Стили для section class="activities"*/
+.wrepper {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+
+
+}
+
+.activities-container {
+	display: flex;
+	flex-direction: column;
+	margin: 0 26px;
+	padding-left: 20px;
+padding-right: 20px;
+	 border-radius: 10px;
+	background-image: url(../img/fon-waffle.jpg);
+	background-position: center;
+	background-repeat: repeat;
+	font-weight: 400;
   color: #323232;
-  background-image: url(../img/fon-waffle.jpg);
-  background-position: center;
-  background-repeat: repeat;
+}
+
+.activities-container-wrepper {
+  display: flex;
+
+}
+
+.activities-item  {
+
+  display: flex;
+  }
+
+.activities-item-3 {
+  display: flex;
+
 }
 
 .activities h2 {
-  color: #323232;
+	color: #323232;
   font-size: 24px;
   font-weight: 500;
   line-height: 30px;
 }
 
-.activities p {
-  margin-left: 4px;
-
-}
-.activities-container {
-  margin: 10px 10px;
-  padding-left: 5px;
-  padding-top: 5px;
-}
-
-.activities-container-wrepper {
+.wrapper-news {
+  margin: 0 26px;
   display: flex;
-  align-content: flex-start;
-  justify-content: space-between;
-}
 
- .activities-item  {
-  width: 576px;
-  display: flex;
-}
+  margin-top: 45px;
 
-.activities-item-3 {
-  display: flex;
+
 }
 
 .newsblock {
-  width: 600px;
-  padding-left: 10px;
-  padding-top: 2px;
-  padding-bottom: 90px;
+  width: 560px;
+  margin-right: 13px;
+  padding-left: 20px;
+  padding-bottom: 40px;
   border-radius: 15px;
   background-image: url(../img/fon-strawberry.jpg);
   background-size: cover;
@@ -432,12 +391,14 @@ li:hover .submit {
 .newsblock p {
   color: #323232;
   font-weight: 500;
+
 }
 
 .newsblock a {
+
   color: #323232;
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 18px;
+  font-weight: 500;
   line-height: 30px;
   text-decoration: underline;
 }
@@ -447,28 +408,30 @@ li:hover .submit {
   color: #e84d37;
 }
 
-.newsletter-wrapper {
-  padding: 1px 13px 70px;
-  background-color: #f8f7f4;
-  border-radius: 15px;
- }
 .newsletter {
-  width: 600px;
-  padding: 10px;
+  width: 560px;
+  padding: 8px;
+
   border-radius: 15px;
   background-image: url(../img/fon-mail.png);
   background-repeat: no-repeat;
   background-size: cover;
+
+
 }
+
+.newsletter-wrapper {
+	padding: 1px 13px 50px;
+
+  background-color: #f8f7f4;
+  border-radius: 15px;
+ }
+
 
 .newsletter p {
   color: #5a5a5a;
   font-weight: 400;
-}
-
-.wrapper-news {
-  display: flex;
-  justify-content: space-between;
+  margin-top: 10px;
 }
 
 .newsletter-wrapper {
@@ -477,11 +440,12 @@ li:hover .submit {
 }
 
 .newsletter-form input {
-  width: 368px;
-  height: 44px;
+
+  margin-right: 17px;
   padding-left: 15px;
-  margin-top: 45px;
-  margin-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 108px;
   border-radius: 5px;
   border: 1px solid rgba(178, 178, 178, 0.52);
   background-color: #ffffff;
@@ -492,17 +456,69 @@ li:hover .submit {
 }
 
 .newsletter-form button {
-  width: 129px;
-  height: 44px;
+
+  padding: 14px 19px;
+  color: #fefefe;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
   border: none;
   border-radius: 25px;
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
   background-color: #e84d37;
   background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
+
 /*Конец для section class="activities"*/
 
 /*Стили для Каталога*/
+
+.magnifier-catalog {
+  width: 33px;
+  height: 33px;
+  background-image: url(../img/logo-magnifier.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  border-radius: 50%;
+}
+
+.header-button-catalog-input {
+
+  padding-top: 10px;
+  padding-left: 44px;
+  padding-right: 17px;
+  opacity: 0,8;
+  padding-bottom: 9px;
+  border-radius: 15px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  color: #ffffff;
+  border: none;
+  background-image: url(../img/logo-input.png);
+  background-repeat: no-repeat;
+  background-position: 16px 40%;
+}
+
+.header-button-basket {
+  padding-left: 35px;
+  padding-top: 10px;
+  padding-right: 17px;
+  padding-bottom: 9px;
+  border-radius: 30px;
+  border: none;
+  color: #ffffff;
+  background-image: url(../img/logo-basket.png);
+  background-repeat: no-repeat;
+  background-position: 10px 10px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+
 
 .header-catalog-site li:first-child {
   background-color: #d07058;
@@ -523,7 +539,13 @@ li:hover .submit {
   display: block;
 }
 
-.button-catalog-basket {
+/*.form-basket:hover .header-button-basket {
+
+  display: none;
+}*/
+
+/*.form-basket:hover {
+
   padding-left: 44px;
   padding-top: 10px;
   padding-right: 16px;
@@ -538,7 +560,10 @@ li:hover .submit {
   font-size: 14px;
   font-weight: 500;
   line-height: 16px;
-}
+}*/
+ .header-catalog-site {
+  position: relative;
+ }
 
 .header-form-catalog {
   position: absolute;
@@ -551,6 +576,7 @@ li:hover .submit {
   padding-top: 20px;
   padding-bottom: 21px;
   display: none;
+  z-index: 1;
 }
 
 .header-form-catalog-basket-1,
@@ -675,6 +701,7 @@ li:hover .submit {
 
 .main-catalog-list a {
   font-weight: 500;
+  text-align: center;
 }
 
 .main-catalog-list  b {
@@ -696,8 +723,25 @@ li:hover .submit {
   justify-content: space-between;
 }
 
+
+
 .main-catalog-list li {
+  position: relative;
  width: 267px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ z-index: 0;
+}
+
+.main-catalog-list li p:nth-child(2) {
+  position: absolute;
+  top: 60%;
+  left: 0px;
+}
+
+.main-catalog-list img {
+  border-radius: 50%;
 }
 
 .wrepper-main-catalog {
@@ -713,15 +757,22 @@ li:hover .submit {
 /* Стили для footer*/
 
 .footer {
-  margin-top: 20px;
+  /*margin-top: 20px;*/
+}
+
+.wrapper-footer {
+	margin: 0 26px;
+  background-image: url(../img/heart.png);
+  background-repeat: no-repeat;
+  background-position: 35% 35%;
+
 }
 
 .footer-documentation {
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
-  background-image: url(../img/heart.png);
-  background-repeat: no-repeat;
+
 }
 
 .footer-documentation a:hover,
@@ -767,7 +818,7 @@ li:hover .submit {
 /*Стили для поапа*/
 .popup {
   position: relative;
-  /*display: none;*/
+  display: none;
 }
 
 .popup-form {
@@ -829,4 +880,7 @@ li:hover .submit {
   opacity: 1;
   background-image: url(../img/_Х-big.png);
  }
+
+
+
 
