--- a/css/style.css
+++ b/css/style.css
@@ -103,19 +103,19 @@ a {
 
 
 .header-navigation-list {
-
   padding: 13px 0;
   background-color: #f8f7f4;
   font-size: 14px;
   line-height: 16px;
   border-radius: 5px;
   position: absolute;
-  top: 40px;
+  top: 39px;
   left: -15px;
   display: none;
 }
 
-.catalog-saite:hover .header-navigation-list {
+.catalog-saite:hover .header-navigation-list,
+.catalog-saite:active .header-navigation-list {
   display: block;
 }
 
@@ -338,14 +338,226 @@ li:hover .submit {
   }
 /*Конец стилей "Вход"*/
 
+.wrepper-sliader {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("../img/slider-item1.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.slider-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.slider {
+  position: relative;
+  margin-bottom: 47px;
+   padding: 0 26px;
+  padding-top: 311px;
+
+  text-align: center;
+  color: #ffffff;
+}
+
+.slide-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 27px;
+
+  font-size: 60px;
+  line-height: 60px;
+  font-weight: 800;
+}
+
+.button {
+  display: inline-block;
+  padding: 12px 44px;
+
+  font-weight: 600;
+  font-size: 31px;
+  line-height: 41px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: top;
+  text-decoration: none;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+
+  background: #f26843;
+  background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border: none;
+
+  cursor: pointer;
+}
+
+.button:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.button:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+
+  vertical-align: top;
+
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 63px;
+  left: 26px;
+  top: 480px;
+  z-index: 20;
+
+  font-size: 0;
+}
+
+#slide2,
+#slide3 {
+  display: none;
+}
+
+/*Стили для section class="bonus"*/
+
+.bonus-wrepper {
+  display: flex;
+   margin-left: auto;
+  margin-right: auto;
+}
+
+.bonus {
+  display: flex;
+  margin-bottom: 46px;
+  padding: 0 26px;
+}
+
+.bonus-1 {
+  width: 560px;
+  margin-right: 25px;
+  padding-left: 20px;
+  padding-bottom: 44px;
+  background-image: url(../img/fon-raspberry.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.bonus-2 {
+  width: 560px;
+  padding-left: 20px;
+  background-image: url(../img/logo-chocolate.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+   border-radius: 10px;
+}
+
+.bonus p {
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.bonus a {
+  padding: 14px 22px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  background-color: #ffffff;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  opacity: 0.99;
+  border: none;
+  border-radius: 20px;
+  margin-left: 330px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  text-decoration:  none;
+}
+
+.bonus a:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.bonus a:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.heath-wrepper {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom:35px;
+}
+
+.main-heath {
+  position: relative;
+  padding: 0 26px;
+}
+
+.heath {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.heath img {
+  position: relative;
+  border-radius: 50%;
+
+}
+
+.heath li {
+  position: relative;
+  width: 267px;
+  text-align: center;
+}
+
+.heath li::before {
+  content: "";
+  position: absolute;
+  width: 67px;
+  height: 67px;
+  background-image: url(../img/logo-heath.png);
+  background-repeat: no-repeat;
+  top: 10px;
+  left: 0;
+  z-index: 1;
+}
+
+.heath li p:nth-child(2) {
+  position: absolute;
+  top: 180px;
+  left: 0px;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+}
 
 /* Стили для section class="activities"*/
 .wrepper {
 	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
-
-
 }
 
 .activities-container {
@@ -387,10 +599,7 @@ padding-right: 20px;
 .wrapper-news {
   margin: 0 26px;
   display: flex;
-
   margin-top: 45px;
-
-
 }
 
 .newsblock {
@@ -438,7 +647,6 @@ padding-right: 20px;
 
 .newsletter-wrapper {
 	padding: 1px 13px 50px;
-
   background-color: #f8f7f4;
   border-radius: 15px;
  }
@@ -456,7 +664,6 @@ padding-right: 20px;
 }
 
 .newsletter-form input {
-
   margin-right: 17px;
   padding-left: 15px;
   padding-top: 15px;
@@ -472,7 +679,6 @@ padding-right: 20px;
 }
 
 .newsletter-form button {
-
   padding: 14px 19px;
   color: #fefefe;
   font-size: 18px;
@@ -485,7 +691,98 @@ padding-right: 20px;
   background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
 
+.newsletter-form button:hover,
+.address button:hover {
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+
+}
+
+.newsletter-form button:active,
+.address button:active {
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
 /*Конец для section class="activities"*/
+
+/*Стили для Карты*/
+
+#map {
+  position: relative;
+  width: 1200px;
+  margin-top: 50px;
+}
+
+#map img {
+  width: 100%;
+}
+
+.address {
+  position: absolute;
+  top: 50px;
+  left: 865px;
+  width: 302px;
+  padding-left: 25px;
+  padding-top: 32px;
+  padding-bottom: 31px;
+  background-color: #ffffff;
+  color: #323232;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  border-radius: 10px;
+}
+
+.address h2 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.address .tell {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.time {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.address-button {
+  padding: 13px 28px;
+  color: #fefefe;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  background-color: #e84d37;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  border-radius: 20px;
+  border: none;
+}
+
+#map img:nth-child(1)  {
+  position: absolute;
+  width: 80px;
+  height: 140px;
+  top: 140px;
+  left: 260px;
+}
+
+#map img:nth-child(2) {
+  position: absolute;
+  width: 182px;
+  height: 110px;
+  top: 174px;
+  left: 292px;
+}
+
+
+
+
 
 /*Стили для Каталога*/
 
@@ -805,7 +1102,11 @@ padding-right: 20px;
 /*Стили для поапа*/
 .popup {
   position: relative;
-  /*display: none;*/
+  display: none;
+}
+
+.popup-clik {
+  display: block;
 }
 
 .popup-form {
@@ -859,15 +1160,22 @@ padding-right: 20px;
 
 
 .close {
-  width: 18px;
-  height: 17px;
-  position: absolute;
-  top: 16px;
-  right: 17px;
-  color:#000;
-  opacity: 1;
-  background-image: url(../img/_Х-big.png);
- }
+  display: none;
+}
+
+.popup button::before {
+ content: "";
+ width: 18px;
+ height: 17px;
+ position: absolute;
+ top: 16px;
+ right: 17px;
+ color:#000;
+ opacity: 1;
+ background-image: url(../img/_Х-big.png);
+}
+
+
 
 
 
