--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ a {
 
  .header-container-2 li {
   height: 35px;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 .header-catalog-site,
@@ -171,6 +171,10 @@ a {
 
 .header-navigation-list li:not(:nth-child(1)):hover {
   background-color: #fbded7;
+}
+
+.header-navigation-list li:not(:nth-child(1)):active {
+  background-color:  #f6b5a5;
 }
 
 
@@ -344,9 +348,8 @@ li:hover .submit {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  margin-right: 28px;
 }
-
-
 
 .wrepper-sliader {
   width: 1200px;
@@ -982,15 +985,148 @@ li:hover .submit {
 }
 
 .timework-time {
+  margin: 0;
+  margin-bottom: 4px;
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;
 }
 
 .timework-tell {
+  margin: 0;
   font-size: 22px;
   font-weight: 700;
   line-height: 24px;
+}
+
+.wrepper-choise-1 {
+  display: flex;
+  align-items: center;
+}
+
+fieldset {
+  border: none;
+}
+
+.fillers {
+  display: inline-block;
+}
+
+select {
+  margin-right: 10px;
+  padding-left: 18px;
+  padding-top: 10px;
+  padding-right: 31px;
+  padding-bottom: 9px;
+  background-color: #9db1a5;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+
+  border: none;
+  border-radius: 20px;
+}
+
+.range {
+  border-radius: 25px;
+  background-color: #aabbb1;
+}
+
+.radio {
+  padding: 8px 14px;
+  background-color: #aabbb1;
+  border-radius: 20px;
+}
+
+.radio label {
+  position: relative;
+}
+
+input[type="radio"] {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+[type="radio"] + span::before {
+  content: '';
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 3px solid  #ffffff;;
+  margin-right: 0.75em;
+  transition: 0.5s ease all;
+}
+
+[type="radio"]:checked + span::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  top: 5%;
+  left: 6.7%;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.checkbox {
+  display: inline-block;
+  padding: 8px 16px;
+  border-radius: 20px;
+  background-color: #a7b9af;
+}
+
+.checkbox span::before {
+  content: " ";
+  color: #000;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-indent: 0px;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+  background: #FFF;
+  border: 2px solid #e3e3e3;
+  border-radius: 5px;
+  border-image: initial;
+  vertical-align: middle;
+  background-color: #a7b9af;
+}
+
+.catalog-button-choice {
+  display: inline-block;
+  padding: 9px 30px;
+  border: 2px solid #f8faf9;
+  border-radius: 20px;
+  background-color: #9cb0a4;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.catalog-button-choice:hover {
+  color: #323232;
+  font-weight: 700;
+  background-color: #ffffff;
+}
+
+.catalog-button-choice:active {
+  box-shadow: inset 0 2px 1px #696969;
+  background-color: #ededed;
 }
 
 .main-catalog h1 {
@@ -1024,15 +1160,14 @@ li:hover .submit {
   justify-content: space-between;
 }
 
-
-
 .main-catalog-list li {
   position: relative;
- width: 267px;
- display: flex;
- flex-direction: column;
- align-items: center;
- z-index: 0;
+  width: 267px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 10px;
+  z-index: 2;
 }
 
 .main-catalog-list li p:nth-child(2) {
@@ -1045,6 +1180,33 @@ li:hover .submit {
   border-radius: 50%;
 }
 
+.main-catalog-list  li:hover {
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
+  background-color: #f8f7f4;
+  background-color: #9bafa3;
+}
+
+.main-catalog-list .quickly {
+  display: none;
+  padding: 13px 17px;
+  color: #fefefe;
+  position: absolute;
+  top: 357px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  box-shadow: 0 1px 2px #ac1000;
+  background-color: #e84d37;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  border-radius: 20px;
+
+}
+
+.main-catalog-list li:hover .quickly {
+  display: block;
+   z-index: 2;
+}
+
 .wrepper-main-catalog {
   justify-content: space-between;
 }
@@ -1053,6 +1215,40 @@ li:hover .submit {
   width: 220px;
   display: flex;
   justify-content: space-between;
+}
+
+.wrepper-page {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 70px;
+  padding-right: 50px;
+}
+
+.wrepper-page a:nth-child(1) {
+  padding: 5px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
+  color: #323232;
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.wrepper-page a {
+  padding: 3px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 50%;
+  text-decoration: none;
+}
+
+.wrepper-page a:not(:nth-child(1)):hover {
+  padding: 3px 10px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #9db1a5;
+  border-radius: 50%;
 }
 
 /* Стили для footer*/
